# rag-lab-kit

./: .env.example  .gitignore  CHEATSHEET.md  LAB_MANUAL.md  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
documents/: college_handbook.txt
extra_documents/: department_manual.txt
rag/: __init__.py  cli.py  config.py  pipeline.py  ui.py
